syntax = "proto3";

option java_package = "se.jsannemo.spooky.compiler.testing";
option java_multiple_files = true;

import "java/se/jsannemo/spooky/compiler/parser/ast.proto";

enum FailureMode {
  FAILURE_MODE_UNSPECIFIED = 0;
  TOKENIZATION = 1;
  PARSING = 2;
  VALIDATION = 3;
  RUNTIME = 4;
}

message TestCases {
  repeated TestCase test_case = 1;
}

message TestCase {
  string name = 1;
  string expected_output = 2;
  FailureMode failure = 3;
}

message TestTokenization {
  repeated se.jsannemo.spooky.compiler.parser.Token tokens = 1;
}

